<resources>
    <string name="app_name">SETP BoardBuddy</string>
    <string name="Play_Matchmaking">Play Matchmaking 🎲</string>
    <string name="Group_Events">Group Events 👨‍👩‍👧‍👦</string>
    <string name="Map">Map</string>
    <string name="Settings">Settings ⚙️</string>
    <string name="My_Matches">My Matches 📝</string>
    <string name="BoardBuddy">BOARD BUDDY</string>

    <string name="Profile">🧔</string>
    <string name="CB_Mode">Colour Blind Mode</string>
    <string name="txtSetting">Text Size: </string>
    <string name="Event_page">Events</string>
    <string name="Back_button">Back</string>
    <string name="Showing_for_Location">Showing for Location:</string>
    <string name="Play">Play</string>

    <string name="title_activity_map">Map</string>




    <string name="Edit_Profile">Edit Profile ✏️</string>
    <string name="Edit_Photo">Edit</string>
    <string name="Edit_Username">Edit Username:</string>
    <string name="Short_Bio">Edit Short Bio:</string>
    <string name="Users_Name">Player\'s Name</string>
    <string name="Password">Edit Password:</string>
    <string name="Back">Back</string>
    <string name="Save">Save</string>
    <string name="Edit_Descr">Edit your details below and hit the save button below:</string>
    <string name="Enter_Username">Enter new name here</string>
    <string name="Enter_Bio">Enter new bio here</string>
    <string name="Enter_Password">Enter new password here</string>
    <string name="Re_enter_Password">Re-enter password here</string>
    <string name="Change_Photo">Change Profile Photo</string>
    <string name="Confirm_Password">Confirm Password:</string>


    <string name="DanSmith">Dan Smith</string>
    <string name="ports">Portsmouth</string>
    <string name="TopGames">Top games</string>
    <string name="bio">Come and challenge me if you dare :D</string>
    <string name="EditProfile">Edit Profile</string>
    <string name="backbtn">Back</string>
    <string name="user_image">User Image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="top_games">Top Games</string>
    <string name="come_and_challenge_me_if_you_dare_d">Come and challenge me if you dare :D</string>
    <string name="portsmouth">Portsmouth</string>
    <string name="dan_smith">Dan Smith</string>
    <string name="chess">CHESS</string>
    <string name="pandemic_legacy">PANDEMIC LEGACY</string>
    <string name="gloomhaven">GLOOMHAVEN</string>
    <string name="dungens_and_dragons">DUNGENS AND DRAGONS</string>
    <string name="brass">BRASS</string>
    <string name="terraforming_mars">TERRAFORMING MARS</string>


    <string name="Logo">Connecting nearby boardgame users.</string>

    <string name="title_activity_maps">Map</string>
    <string name="title_activity_location_map">LocationMap</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>



    <string name="Night_Mode">Night Mode</string>
    <string name="MainMenu">MAIN MENU</string>



    <string name="Back_Button">Back</string>
<!--    <string name="Sort_By">Sort By</string>-->
    <string name="Profiles">Profile</string>

    <string-array name="Sort_By_Itms">
        <item>Distance</item>
        <item>Age</item>
        <item>Example</item>
    </string-array>

    <string-array name="games_array">
        <item>Chess</item>
        <item>Draughts</item>
        <item>Backgammon</item>
        <item>Battleships</item>
        <item>Blackjack</item>
        <item>Connect 4</item>
        <item>Noughts and Crosses</item>
        <item>Snap</item>
        <item>Guess Who</item>
    </string-array>



    <string name="backbtn_ge">Back</string>
    <string name="Events">Events</string>
    <string name="Event_message">Showing for Location: </string>
    <string name="Sort_By">Sort By: </string>
    <string name="Button">Button</string>

    <string name="Messagebtn_dis">Message button</string>
    <string name="CreateEventBtn">Button to Create Events</string>
    <string name="Example">Example</string>

    <string-array name="Sort_By_Events">
        <item>Distance</item>
        <item>Preferred Games</item>
        <item>Similar Skill</item>
    </string-array>


</resources>
