<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MyMatches">

    <Button
        android:id="@+id/btnBack4"
        android:layout_width="60dp"
        android:layout_height="55dp"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:onClick="MainActivity"
        android:text="⬅️"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/MyMatchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/My_Matches"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.539"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Sortbytxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sort_By"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.748"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <Spinner
        android:id="@+id/Sort_by"
        android:layout_width="149dp"
        android:layout_height="28dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />

    <ScrollView
        android:layout_width="393dp"
        android:layout_height="532dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="-1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Sort_by"
        app:layout_constraintVertical_bias="1.0">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/profile1"
                    android:layout_width="200dp"
                    android:layout_height="180dp"
                    android:contentDescription="@string/Profiles"
                    android:src="@drawable/p1"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="64dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageButton
                    android:id="@+id/profile2"
                    android:layout_width="200dp"
                    android:layout_height="180dp"
                    android:contentDescription="@string/Profiles"
                    android:src="@drawable/p2"
                    tools:srcCompat="@tools:sample/avatars" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/profile3"
                    android:layout_width="200dp"
                    android:layout_height="180dp"
                    android:contentDescription="@string/Profiles"
                    android:src="@drawable/p3"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageButton
                    android:id="@+id/profile4"
                    android:layout_width="200dp"
                    android:layout_height="180dp"
                    android:contentDescription="@string/Profiles"
                    android:src="@drawable/p4"
                    tools:srcCompat="@tools:sample/avatars" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/profile5"
                    android:layout_width="200dp"
                    android:layout_height="180dp"
                    android:contentDescription="@string/Profiles"
                    android:src="@drawable/p5"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageButton
                    android:id="@+id/profile6"
                    android:layout_width="200dp"
                    android:layout_height="180dp"
                    android:contentDescription="@string/Profiles"
                    android:src="@drawable/p6"
                    tools:srcCompat="@tools:sample/avatars" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/profile7"
                    android:layout_width="200dp"
                    android:layout_height="180dp"
                    android:contentDescription="@string/Profiles"
                    android:src="@drawable/p7"
                    tools:srcCompat="@tools:sample/avatars" />

                <ImageButton
                    android:id="@+id/profile8"
                    android:layout_width="200dp"
                    android:layout_height="180dp"
                    android:contentDescription="@string/Profiles"
                    android:src="@drawable/p8"
                    tools:srcCompat="@tools:sample/avatars" />
            </TableRow>
        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>